test/parser/deinit-params.delta.output
deinit-params.delta:5:5: error: destructors cannot have parameters
    ~Foo(int i) { }
    ^
