test/parser/deinit-params.delta
// RUN: %check_errors %not %delta -parse %s

struct Foo: Copyable {
    // CHECK: [[@LINE+1]]:5: error: destructors cannot have parameters
    ~Foo(int i) { }
}
